# zhscript2-no-std-rust

./: Cargo.toml  readme.md
.zs/: kws.zhscript  kws.zs
src/: kws.zs  lib.rs
